--- a/docs/layouts/layout.erb
+++ b/docs/layouts/layout.erb
@@ -86,7 +86,7 @@ under the License.
       <% end %>
       <% if current_page.data.search %>
         <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
+          <input type="text" class="search" id="input-search" placeholder="Search the docs...">
         </div>
         <ul class="search-results"></ul>
       <% end %>
